# back/routes/calendar.js
@@ -100,6 +100,35 @@ router.post("/editGroupCalendar", authJWT, async (req, res, next) => {
   }
 });
 
+router.post("/deleteGroupCalendar", authJWT, async (req, res, next) => {
+  try {
+    const exCalendar = await Calendar.findOne({
+      where: {
+        id: req.body.calendarId
+      }
+    })
+    if (!exCalendar) {
+      res.status(400).send({ message: "삭제하려는 캘린더를 찾을 수 없습니다 입력값을 다시 확인해주세요"})
+    }
+    console.log(req.myId)
+    console.log(exCalendar.OwnerId)
+    if (exCalendar.OwnerId !== req.myId) {
+      res.status(401).send({ message: "삭제하려는 유저가 캘린더의 주인이 아닙니다 본인의 캘린더인지 다시 확인해주세요"})
+    }
+    await sequelize.transaction(async (t) => {
+      await Calendar.destroy({
+        where: {
+          id: req.body.calendarId
+        }
+      })
+    })
+    res.status(200).send({ success : true })
+  } catch (e) {
+    console.error(e)
+    next(e)
+  }
+})
+
 router.post("/inviteGroupCalendar", authJWT, async (req, res, next) => {
   try {
     const guest = await User.findOne({
